force-app/main/default/objects/CareTeamMember__c/CareTeamMember__c.object-meta.xml
<CustomObject>
    <label>Care Team Member</label>
    <nameField>
        <label>Care Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>