force-app/main/default/objects/CareTeamMember__c/fields/Care_Team__c.field-meta.xml
<CustomField>
    <fullName>Care_Team__c</fullName>
    <label>Care Team</label>
    <referenceTo>CareTeam__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>