force-app/main/default/objects/CareTeamMember__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Care Team Members</relationshipLabel>
    <relationshipName>CareTeamMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>