force-app/main/default/objects/CareTeamMember__c/listViews/Active_Members.listView-meta.xml
<ListView>
    <fullName>Active_Members</fullName>
    <columns>NAME</columns>
    <columns>Care_Team__c</columns>
    <columns>Practitioner__c</columns>
    <columns>Role__c</columns>
    <columns>Access_Level__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Members</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>