force-app/main/default/objects/CareTeamMember__c/listViews/All_Members.listView-meta.xml
<ListView>
    <fullName>All_Members</fullName>
    <columns>NAME</columns>
    <columns>Care_Team__c</columns>
    <columns>Practitioner__c</columns>
    <columns>Role__c</columns>
    <columns>Access_Level__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Members</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>